--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
             <div class="m-but"></div>
         </div>
         <h1>Update-United Team</h1>
-        <div class="admins"></div>
+        <div class="admin-panel">
+            <div class="admins"></div>
+            <div class="menu-acaunt">
+
+            </div>
+            <div class="menu-panel">
+                <!-- <div class="but-menu new-account">New Account</div> -->
+                <!-- <div class="but-menu log-in">Log in</div> -->
+                <div class="but-menu log-out">Log out</div>
+            </div>
+        </div>
     </header>
     <!-- <div class="sign-up-sistem">
         <div class="panel">
@@ -29,21 +39,21 @@
         </div>
     </div> -->
     <div class="navbar">
-
         <div class="login-container">
-            <h2>Login</h2>
+            <h2 id="formTitle">Вход</h2>
             <div id="message" class="error-message"></div>
-            <form id="loginForm">
+            <form id="authForm">
                 <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" placeholder="Enter username">
+                    <label for="username">Имя пользователя</label>
+                    <input type="text" id="username" placeholder="Введите имя">
                 </div>
                 <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" placeholder="Enter password">
+                    <label for="password">Пароль</label>
+                    <input type="password" id="password" placeholder="Введите пароль">
                 </div>
-                <button type="submit" class="login-button">Login</button>
+                <button type="submit" class="login-button">Продолжить</button>
             </form>
+            <span id="toggleAuth">Нет аккаунта? Зарегистрируйтесь</span>
         </div>
     </div>
     <aside>
